--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 }
 body {
     padding: 0 20px;
-    background-image: url(https://media0.giphy.com/media/l3vRmjIZpfYp8MLwA/200.webp?cid=ecf05e47zffowii5tspd0i6y4k25h8hzi42j28d9qreeykj1&rid=200.webp);
+    /* background-image: url(https://media0.giphy.com/media/l3vRmjIZpfYp8MLwA/200.webp?cid=ecf05e47zffowii5tspd0i6y4k25h8hzi42j28d9qreeykj1&rid=200.webp); */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
